# rust-rocket

./: .gitignore  Cargo.toml  README.md  Rocket.toml  diesel.toml  rust-rocket.db-shm  rust-rocket.db-wal
migrations/2025-08-22-174200_create_tables/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
