[package]
name = "rust-rocket"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_sqlite_pool"] }
diesel = { version = "2.2.12", features = ["sqlite", "r2d2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# This is where bundled SQLite comes in
[dependencies.libsqlite3-sys]
version = "0.30.1"
features = ["bundled"]
